kubevirt/ubiquiti-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubiquiti-manager-http 
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: ubiquiti-manager
spec:
  rules:
    - host: unifi.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubiquiti-manager-http
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubiquiti-manager-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: ubiquiti-manager
spec:
  rules:
    - host: unifi.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubiquiti-manager-https
                port:
                  number: 8443
  tls:
    - hosts:
        - unifi.celestium.life
      secretName: unifi-cert
